# automated-multi-agent-job-finding-engine

./: README.md
job_discovery_agents/: README.md  pyproject.toml  report.md  test.py
job_discovery_agents/src/job_discovery_agents/: crew.py  job_scrapper.py  main.py
job_discovery_agents/src/job_discovery_agents/config/: agents.yaml  tasks.yaml
