[project]
name = "job_discovery_agents"
version = "0.1.0"
description = "job-discovery-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "tavily-python>=0.7.22",
]

[project.scripts]
job_discovery_agents = "job_discovery_agents.main:run"
run_crew = "job_discovery_agents.main:run"
train = "job_discovery_agents.main:train"
replay = "job_discovery_agents.main:replay"
test = "job_discovery_agents.main:test"
run_with_trigger = "job_discovery_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
